feat: finishing development